# rumoca

./: .Cargo.toml.swp  .README.md.swo  .README.md.swp  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  backup.rs  build.rs  build.rs.orig  integrator.py  modelica-exp.par  modelica.par  res  test.mo  test.py  test.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: lsp_feature.md
.github/workflows/: ci.yml  publish.yml  python.yml  release.yml  rust.yml  vscode-extension.yml
bindings/python/: pyproject.toml
bindings/python/tests/: test_compiler.py
docs/: MSL_ROADMAP.md  RELEASE_SETUP.md
editors/vscode/: .eslintrc.json  .vscodeignore  README.md  ROADMAP.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: modelica-injection.tmLanguage.json  modelica.tmLanguage.json
examples/: basic_usage.rs  wasm_test.html  wasm_test.rs
examples/templates/: README.md
examples/wasm_editor/: index.html  rumoca_worker.js
models/: ackermann.mo  bouncingball.mo  flatearth6dof.mo  integrator.mo  quadrotor.mo
python/: MANIFEST.in  README.md  pyproject.toml
python/rumoca/: __init__.py  compiler.py
python/tests/: test_compiler.py
scripts/: bundle-msl.py  test_msl.py  wasm-test.sh
src/: ast.rs  compiler.rs  dae.rs  errors.rs  flat_ast.rs  formatter.rs  generator.rs  ir.rs  lexer.rs  lib.rs  main.rs  model.mo  modelica-exp.par  modelica_grammar.rs  modelica_grammar_trait.rs  modelica_parser.rs  parser.lalrpop  tokens.rs
src/compiler/: error_handling.rs  mod.rs  pipeline.rs  result.rs
src/dae/: ast.rs  base_modelica.rs  dae_ir.rs  jinja.rs  mod.rs
src/dae/dae_ir/: mod.rs
src/fmt/: mod.rs
src/fmt/visitor/: components.rs  expressions.rs  mod.rs
src/generators/: casadi_mx.rs  casadi_sx.rs  collimator.rs  json.rs  mod.rs  sympy.rs
src/generators/templates/: casadi_sx.tera
src/ir/: ast.rs  balance_check.rs  blt.rs  create_dae.rs  flatten.rs  location.rs  mod.rs  multi_file.rs  scope_resolver.rs  structural.rs  symbol_table.rs  visitor.rs
src/ir/analysis/: balance_check.rs  type_checker.rs  type_inference.rs  var_validator.rs
src/ir/structural/: create_dae.rs  differentiate.rs  pantelides.rs
src/ir/transform/: array_comprehension.rs  constants.rs  flatten.rs  mod.rs  multi_file.rs  operator_expand.rs  scope_resolver.rs
src/ir/visitors/: condition_finder.rs  expression_visitor.rs  function_inliner.rs  import_resolver.rs  mod.rs  pre_finder.rs  scope_pusher.rs  state_finder.rs  sub_comp_namer.rs  var_validator.rs
src/lint/: mod.rs  rules.rs
src/lint/rules/: references.rs  structure.rs
src/lsp/: analyze.rs  builtin_functions.rs  call_hierarchy.rs  code_actions.rs  code_lens.rs  completion.rs  diagnostics.rs  document_links.rs  document_symbols.rs  folding.rs  formatting.rs  goto_definition.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  scope.rs  semantic_tokens.rs  signature_help.rs  type_definition.rs  utils.rs  workspace.rs  workspace_symbols.rs
src/lsp/features/: code_actions.rs  code_lens.rs  document_links.rs  folding.rs  inlay_hints.rs  (+1 more)
src/modelica_grammar/: definitions.rs  expressions.rs  helpers.rs  mod.rs  modelica.par
src/s0_lexer/: lexer.rs  tokens.rs
src/s1_parser/: ast.rs  mod.rs  modelica.lalrpop  parser_helper.rs
src/s2_analyzer/: ast.rs  dae_ast.rs  dae_creator.rs  evaluator.rs  flattener.rs  mod.rs
src/s4_generator/: generator.rs  mod.rs
src/visitor/: mod.rs  sub_comp_namer.rs
templates/: ackermann.jinja  casadi_mx.jinja  casadi_mx.tera  casadi_sx.jinja  casadi_sx.tera  gazebo_multirotor.jinja  sympy.jinja  sympy.tera
test/models/: ackermann.mo  flatearth6dof.mo  integrator.mo  quadrotor.mo  simple_circuit.mo
test/templates/: ackermann.jinja  casadi_daebuilder.jinja  casadi_sx.jinja
tests/: balance_tests.rs  base_modelica_tests.rs  dae_ir_tests.rs  dae_tests.rs  event_functions_tests.rs  flatten_tests.rs  lsp_tests.rs  msl_tests.rs  noevent_smooth_tests.rs  package_structure_tests.rs  parser_tests.rs  pyproject.toml
tests/common/: mod.rs
tests/fixtures/: annotation_constant_test.mo  array_balance.mo  array_literal_test.mo  bouncing_ball.mo  comparison_operators.mo  complex_arithmetic.mo  component_mods.mo  conditional_components.mo  constant_test.mo  extends_constant_test.mo  for_equation.mo  function_usage.mo  if_expression.mo  imports.mo  initial_equation.mo  inner_outer.mo  integrator.mo  integrator_simple.mo  matrix_test.mo  msl_derivative_test.mo  msl_pid_simple.mo  nightvapor.mo  noevent_smooth.mo  packages.mo  parameter_arrays.mo  pid_test.mo  quadrotor.mo  rover.mo  scoping_test.mo  si_conversion_test.mo  simple_circuit.mo  simple_package.mo  size_function.mo  type_causality.mo  typed_constant_test.mo  unbalanced_overdetermined.mo  unbalanced_underdetermined.mo
tests/fixtures/package_structure/MyLib/: Functions.mo  Types.mo
tests/fixtures/package_structure/MyLib/Examples/: AdvancedModel.mo  SimpleModel.mo  package.mo
tests/models/: bouncing_ball.mo  integrator.mo  nightvapor.mo  quadrotor.mo  rover.mo
tests/notebooks/: bouncing_ball.py  bouncing_ball_sympy.ipynb  daebuilder.ipynb  nightvapor.py  nightvapor_sympy.ipynb  quadrotor.ipynb  quadrotor.py  quadrotor_node.py  quadrotor_sympy.ipynb  quadrotor_sympy.py  rover_casadi_daebuilder.ipynb  rover_node.py  rover_sympy.ipynb  rover_sympy.py  simple_circuit.ipynb  simple_circuit.py  test.ipynb  test.py
tests/notebooks/python/: poetry.toml  pyproject.toml  sympy
tests/templates/: casadi.jinja  gz_ackermann.jinja  sympy.jinja
tools/: build-python.sh  build-vscode-ext.sh  python-dev.sh  python-publish.sh  release.sh  test-extension.sh  test.sh  wasm-test.sh
(+9 files in other folders)
