[package]
name = "rumoca"
version = "0.7.2"
edition = "2024"
description = "Modelica translator written in RUST"
license = "Apache-2.0"
repository = "https://github.com/jgoppert/rumoca"
homepage = "https://github.com/jgoppert/rumoca"
documentation = "https://docs.rs/rumoca"
keywords = ["modelica", "compiler", "dae", "simulation"]
categories = ["compilers", "science", "simulation"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chksum-md5 = "0.1.0"
clap = "4.5.31"
env_logger = "0.11"
git-version = "0.3.9"
indexmap = { version = "2.7.1", features = ["serde"] }
miette = { version = "7.4.0", features = ["fancy"] }
minijinja = { version = "2.8.0", features = ["json"] }
owo-colors = "4.0"
parol = "3.0.1"
parol_runtime = "3.0.0"
serde = "1.0.218"
serde_json = "1.0"
# parol_runtime = "2.2.1"
thiserror = "1.0"

# LSP dependencies
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }

[features]
regen-parser = []
default = []
lsp = ["lsp-server", "lsp-types"]

[[bin]]
name = "rumoca-lsp"
path = "src/bin/rumoca_lsp.rs"
required-features = ["lsp"]

[build-dependencies]
parol = "3.0.1"

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
