[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rumoca"
version = "0.7.2"
description = "Python interface for the Rumoca Modelica compiler"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rumoca Contributors"}
]
keywords = ["modelica", "compiler", "simulation", "dae", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

cyecca = [
    "cyecca>=0.1.0",
]

notebook = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "numpy>=1.20",
]

all = [
    "rumoca[dev,cyecca,notebook]",
]

[project.urls]
Homepage = "https://github.com/jgoppert/rumoca"
Documentation = "https://github.com/jgoppert/rumoca/blob/main/python/README.md"
Repository = "https://github.com/jgoppert/rumoca"
Issues = "https://github.com/jgoppert/rumoca/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rumoca*"]

[tool.setuptools.package-data]
rumoca = ["py.typed"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
