[project]
name = "rumoca-env"
version = "0.1.0"
description = "Python environment for rumoca analysis and Jupyter notebooks"
authors = ["James Goppert"]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.7"
control = "^0.10.2"
numpy = "^2.3.3"
scipy = "^1.16.2"
sympy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
