[tool.poetry]
name = "rumoca"
package-mode = false

[virtualenvs]
create = true
in-project = true
path = ".venv-rumoca"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.14.0"
control = "^0.10.2"
matplotlib = "^3.10.7"
scipy = "^1.16.2"
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
