[tool.poetry]
name = "rumoca"
package-mode = false

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "~3.12"
sympy = "~1.12"
numpy = "~1.26"
control = "0.10.1"
matplotlib = "~3.6"
scipy = "~1.11"
ipykernel = "~6.29"
slycot = "~0.6.0"
pyyaml = "^6.0.3"
transforms3d = "^0.4.2"
casadi = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
